﻿0.5.0 [TBD]
[+] Implement throwing original exception. Look UseExceptionDispatchInfo option.
[*] Fix empty ctor expression generate.
[*] Refactor pipeline initialization logic. New pipeline builder Configure method.

0.4.5 [2017-12-11]
[*] Fix incorrect package included versions.
[+] Log query results to repository using "@result" key.
[*] Fix skip, take query methods for files repositories.

0.4.3 [2017-11-17]
[+] Exclude few fields from deserialization: WatsonBuckets, TargetSite.
[*] Elasticsearch and csv fields missed fix.
[*] Fix DataMiddleware items handle.
[*] Fix Newtonsoft.Json version. 
[*] Minor fixes.

0.4.0 [2017-09-13]
[*] Separate object resolving to separate middleware (CommandHandlerResolverMiddleware, EventHandlerResolverMiddleware).
[-] Remove UseParametersResolve parameter for queries pipeline.
[+] Add IMessagePipelinePostAction interface. The handler will be executed after all middleware execution.
[+] Optimize handlers resolving.
[*] Do not resolve object hanlders public properties by default, set UsePropertiesResolving to true for this.
[+] Generic commands.
[+] Generic events.

0.3.0 [2017-08-07]
[*] Fix AddQueryPipeline method.

0.2.0 [2017-07-27]
[+] Global pipelines refactoring. Instead of register and using every pipeline separately use IMessagePipelineService.
[*] Refactor and improve work for files and ADO.NET repositories.
[*] Add cancellation token to async method for pipelines and repositories.
[*] Refactor common messages repositories, bugfix.
[*] Add pipelines configuration loading from .config file.
[*] Downgrade dependencies to netstandard1.5 and net452.

0.1.1 [2017-02-13]
[*] Fix reference to Saritasa.Tools.Domain .

0.1.0 [2017-02-11]
[+] Initial release.